# quizgecko

./: .gitignore  README.md  pyproject.toml
quizgecko/: __init__.py  client.py  errors.py  models.py
quizgecko.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quizgecko/endpoints/: __init__.py  generate.py  languages.py  questions.py  quiz.py  upload.py
tests/: test_basic.py
